# talon-ai-tools

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  conf.py  gpt-settings.talon  gpt.py  gpt.talon  index.md  models.json  models.json.example  package-lock.json  promptNoArgument.talon-list  pyproject.toml  readme.md  requirements-ci.txt  requirements-docs.txt  talon-ai-settings.talon.example
.docs/: astro.config.mjs  conf.py  index.md  package-lock.json  tsconfig.json
.docs/_static/css/: custom-fragtables.css  custom-tabs.css
.docs/_static/js/: custom-fragtables.js
.docs/components/: FetchedData.astro
.docs/src/components/: FetchedData.astro  LocalFile.astro
.docs/src/content/docs/: index.md
.docs/src/content/docs/guides/: customizing.mdx  quickstart.md  quickstart.mdx
.docs/src/content/docs/reference/: copilot.mdx  gpt.mdx
.docs/usage-examples/: examples.md
.github/: .markdown-link-check.json  local.sh  requirements-test.txt
.github/workflows/: ci.yml  docs.yml  pyright.yml  test.yml
.test/: unit_test.py
CodeInterpreter/: gpt-interpreter.py  gpt-interpreter.talon
Dictation/: gpt-dictation.py  natural-mode.py  natural-mode.talon  readme.md
GPT/:  gpt-cursorless.talon  customPrompt.talon-list.example  example.md  examples.md  gpt-confirmation-gui.talon  gpt-contextual.talon  gpt-cursorless.talon  gpt-function-calling.py  gpt-function-calling.talon  gpt-settings.talon  gpt-settings.talon.example  gpt-shell.talon  gpt-with-context.talon  gpt.py  gpt.talon  gpt_beta.talon  model-window-open.talon  modelInsertionMethod.talon-list  modelResponseMethod.talon-list  modelTextSource.talon-list  readme.md  staticPrompt.talon-list  staticPrompts.talon-list
GPT/beta-commands/: beta-cursorless.talon  beta-docs.talon  beta-func-calling.talon  beta-gpt.py  beta-gpt.talon  continue.talon  gpt-function-calling.py  gpt_callables.py  types.py
GPT/beta-commands/function-calling/: cursorless-function-calling.talon  gpt-function-calling.py  gpt-function-calling.talon  gpt_callables.py  readme.md
GPT/lib/: HTMLbuilder.py  gpt_helpers.py  styles.css  talon_settings.py  types.py
GPT/lists/: customPrompt.talon-list.example  model.talon-list  modelAlias.talon-list  modelDestination.talon-list  modelInsertionModifier.talon-list  modelModifier.talon-list  modelPasteDestination.talon-list  modelSource.talon-list  modelThread.talon-list  staticPrompt.talon-list  thread.talon-list
Images/: ai-images.py  ai-images.talon  describe.py  descriptionPrompt.talon-list  generationPrompt.talon-list  images.talon  readme.md
NaturalDictation/: mode-switch.talon  natural-mode.py  natural-mode.talon
TTS/: gpt-tts.talon  image-tts.talon  openai-tts.py  readme.md
copilot/: README.md  codeium.talon  continue.talon  copilot.py  copilot.talon
docs/: README.md  astro.config.mjs  conf.py  index.md  package-lock.json  package.json
docs/src/components/: FetchedData.astro
docs/src/content/docs/: index.md  index.mdx
lib/: HTMLBuilder.py  a11yHelpers.py  confirmationGUI.py  modelConfirmationGUI.py  modelHelpers.py  modelState.py  modelTypes.py  pureHelpers.py  styles.css  talonSettings.py
(+4 files in other folders)
