
[project]
name = "talon-ai-tools"
version = "1.0.0"
description = "Use Talon with AI tools to speed up your development."
license = { file = 'LICENSE' }
authors = [
    { name = "Colton Loftus", email = "c-loftus@users.noreply.github.com" },
]
readme = "README.md"
keywords = ["talon", "GPT", "OpenAI"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.black]
target-version = ['py310']

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
pythonpath = [".", "test/stubs"]

[tool.pyright]
reportSelfClsParameterName = false
