
[project]
name = "talon-ai-tools"
version = "1.0.0"
description = "Use Talon with AI tools to speed up your development."
license = { file = 'LICENSE' }
authors = [
    { name = "Colton Loftus", email = "c-loftus@users.noreply.github.com" },
]
readme = "README.md"
keywords = ["talon", "GPT", "OpenAI"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]

[tool.black]
target-version = ['py311']

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
pythonpath = [".", "test/stubs"]

[tool.pyright]
pythonVersion = "3.11"
# Talon classes don't use self so ignore the associated errors
reportSelfClsParameterName = false
reportGeneralTypeIssues = false
# Imgui functions return an object that can't be statically resolved
reportFunctionMemberAccess = false
# Talon can't be installed in CI so ignore source errors
reportMissingModuleSource = false
reportMissingImports = false
